# SitePulse

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  app.py  generate_wordclouds.py  pyproject.toml  requirements.txt  scrape_websites.py  tfidf_analysis.py
.github/prompts/: generate_wordclouds.prompt.md  scrape_websites.prompt.md  streamlit_ui.prompt.md  tfidf_analysis.prompt.md
