[project]
name = "sitepulse"
version = "0.1.0"
readme = "README.md"
authors = [
    { name = "Jim Massey", email = "jim.massey@etika.com" }
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "httpx>=0.28.1",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "scikit-learn>=1.6.1",
    "streamlit>=1.45.0",
    "wordcloud>=1.9.4",
]
